--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "rental-app",
-  "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.26",
-    "axios": "^1.12.2",
-    "expo": "~54.0.7",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "^0.81.4",
-    "tailwind-rn": "^4.2.0"
+    "expo": "~51.0.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "react": "18.2.0",
+    "react-native": "0.74.1",
+    "tailwind-rn": "^4.2.0",
+    "axios": "^1.7.2"
   },
-  "private": true
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  }
 }
